# shiro

./: .env.example  index.html  package-lock.json  package.json
.github/workflows/: build.yml
docs/: capture-exclusion.md
src/: App.css  index.css  main.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: capture.rs  lib.rs  llm.rs
src/hooks/: useCaptureQuery.ts  useHistory.ts  useSpeech.ts  useTemplates.ts
src/windows/: MainWindow.tsx  OverlayWindow.tsx
