[package]
name = "shiro"
version = "0.1.0"
description = "Screen-to-LLM desktop assistant"
authors = ["you"]
edition = "2021"

[lib]
name = "shiro_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-ico", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Screen capture
xcap = "0.9.6"

# Image encoding: BGRA -> PNG bytes
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

# Base64 encoding for Claude API
base64 = "0.22"

# HTTP client for Claude API
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Async trait support
async-trait = "0.1"

[profile.release]
opt-level = "s"   # optimize for binary size

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.3.2", features = ["NSWindow"] }
